added homepage content

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <!--nav-->
     <nav>
+        <!-- <div id="nav-bar"> -->
         <div class="top-left">
             <a href="#">My Furniture</a>
         </div>
@@ -19,14 +20,20 @@
             <a href="#">About us</a>
             <a href="#">Contact</a>
         </div>
+        <!-- </div> -->
     
     <button>Login</button>
     
     </nav>
 
     <!--Homepage-->
-    <div id="home">
-        <h3>Classy Rooms Require Furnitures</h3>
+    <div id="home-page">
+    <div class="home">
+        <h3>Classy Rooms Require Furnitures. <br> We make beautifully designed <br> and sustainable furniture</h3>
+    </div>
+    <div class="home-img">
+        <img src="#" alt="Background Image">
+    </div>
     </div>
 </body>
 </html>
