--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./Assets/css/style.css">
 </head>
 <body>
     <!--nav-->
-    <nav>
+    <nav class="top">
         <!-- <div id="nav-bar"> -->
         <div class="top-left">
             <a href="#">My Furniture</a>
@@ -19,10 +20,8 @@
             <a href="#">Products</a>
             <a href="#">About us</a>
             <a href="#">Contact</a>
+            <button>Login</button>
         </div>
-        <!-- </div> -->
-    
-    <button>Login</button>
     
     </nav>
 
