added homepage image

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h3>Classy Rooms Require Furnitures. <br> We make beautifully designed <br> and sustainable furniture</h3>
     </div>
     <div class="home-img">
-        <img src="#" alt="Background Image">
+        <img src="./Assets/images/background.jpg" alt="Background Image" height="320">
     </div>
     </div>
 </body>
