added buttonto the nav-bar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#">Products</a>
             <a href="#">About us</a>
             <a href="#">Contact</a>
-            <button>Login</button>
+            <button class="btn">Login</button>
         </div>
     
     </nav>
