added button on homepage

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <div id="home-page">
     <div class="home">
         <h3>Classy Rooms Require Furnitures. <br> We make beautifully designed <br> and sustainable furniture</h3>
+        <button class="btn2">Discover</button>
+    
     </div>
     <div class="home-img">
         <img src="./Assets/images/background.jpg" alt="Background Image" height="320">
