added icons to the homepage

--- a/index.html
+++ b/index.html
@@ -36,5 +36,26 @@
         <img src="./Assets/images/background.jpg" alt="Background Image" height="320">
     </div>
     </div>
+
+    <div class="icons">
+    <div class="transp-icon">
+        <img src="./Assets/images/transport.png" alt="Free TRansport" height="20px">
+        <p>Free Transport</p>
+    </div>
+
+    <div class="cust-support">
+        <img src="./Assets/images/cust-supp.png" alt="Customer Support" height="20px">
+        <p>Customer Support</p>
+    </div>
+
+    <div class="Store">
+        <img src="./Assets/images/store.png" alt="store" height="20px">
+        <p>Our Store</p>
+    </div>
+
+    <div class="Warranty">
+        <img src="./Assets/images/warranty.jpeg" alt="Warranty" height="20px">
+    </div>
+    </div>
 </body>
 </html>
