add README.md file

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
     <div class="Warranty">
         <img src="./Assets/images/warranty.jpeg" alt="Warranty" height="20px">
+        <p>Warranty</p>
     </div>
     </div>
 </body>
