deleted background image

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <button class="btn2">Discover</button>
     
     </div>
-    <!-- <div class="home-img">
+    <div class="home-img">
         <img src="./Assets/images/background.jpg" alt="Background Image" height="320">
-    </div> -->
+    </div>
     </div>
 
     <div class="icons">
@@ -57,6 +57,10 @@
         <img src="./Assets/images/warranty.jpeg" alt="Warranty" height="20px">
         <p>Warranty</p>
     </div>
+    </div>
+
+    <div id="products">
+        <h3>Products</h3>
     </div>
 </body>
 </html>
