--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
     <!--nav-->
     <nav class="top">
-        <!-- <div id="nav-bar"> -->
         <div class="top-left">
             <a href="#">My Furniture</a>
         </div>
@@ -26,10 +25,12 @@
     </nav>
 
     <!--Homepage-->
+
     <div id="home-page">
     <div class="home">
         <h3>Classy Rooms Require Furnitures. <br> We make beautifully designed <br> and sustainable furniture</h3>
-        <button class="btn2">Discover</button>
+        <button class="btn2">Buy Now</button>
+        <button class="btn3">Explore</button>
     
     </div>
     <div class="home-img">
@@ -59,8 +60,23 @@
     </div>
     </div>
 
+    <!--Products-->
     <div id="products">
         <h3>Products</h3>
+        <p>We deal with the following products</p>
+        <ul>
+            <li>Lazy Sofa</li>
+            <li>Motion Sofa</li>
+            <li>Bar Stool</li>
+            <li>Dinning Chair</li>
+            <li>Office Chair</li>
+        </ul>
+
+       
+        <div class="Sofas">
+            <img src="" alt="#">
+            <p></p>
+        </div>
     </div>
 </body>
 </html>
