--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <!--nav-->
+
     <nav class="top">
         <div class="top-left">
             <a href="#">My Furniture</a>
@@ -40,36 +41,39 @@
 
     <div class="icons">
     <div class="transp-icon">
-        <img src="./Assets/images/transport.png" alt="Free TRansport" height="20px">
+        <img src="./Assets/images/transport.png" alt="Free TRansport" height="40px">
         <p>Free Transport</p>
     </div>
 
     <div class="cust-support">
-        <img src="./Assets/images/cust-supp.png" alt="Customer Support" height="20px">
+        <img src="./Assets/images/cust-supp.png" alt="Customer Support" height="40px">
         <p>Customer Support</p>
     </div>
 
     <div class="Store">
-        <img src="./Assets/images/store.png" alt="store" height="20px">
+        <img src="./Assets/images/store.png" alt="store" height="40px">
         <p>Our Store</p>
     </div>
 
     <div class="Warranty">
-        <img src="./Assets/images/warranty.jpeg" alt="Warranty" height="20px">
+        <img src="./Assets/images/warranty.jpeg" alt="Warranty" height="40px">
         <p>Warranty</p>
     </div>
     </div>
 
     <!--Products-->
+
     <div id="products">
         <h3>Products</h3>
-        <p>We deal with the following products</p>
+        <p><strong>All the furniture <br> products you are <br> looking for are  <br> available here, <br> enjoy  the experience of <br> various furniture</strong></p>
+        <h4><strong>Featured Products</strong></h4>
+        <p>Featuring the products you might be looking for</p>
         <ul>
-            <li>Lazy Sofa</li>
-            <li>Motion Sofa</li>
-            <li>Bar Stool</li>
-            <li>Dinning Chair</li>
-            <li>Office Chair</li>
+            <li><em>Lazy Sofa</em></li>
+            <li><em>Motion Sofa</em></li>
+            <li><em>Bar Stool</em></li>
+            <li><em>Dinning Chair</em></li>
+            <li><em>Office Chair</em></li>
         </ul>
 
        
