added styling to feature products

--- a/index.html
+++ b/index.html
@@ -65,9 +65,20 @@
 
     <div id="products">
         <h3>Products</h3>
+        <div class="furn-products">
+        <div class="theProducts">
         <p><strong>All the furniture <br> products you are <br> looking for are  <br> available here, <br> enjoy  the experience of <br> various furniture</strong></p>
+        </div>
+
+        <div class="backg2-img">
+            <img src="./Assets/images/products.webp" alt="bar-stool" height="300px">
+        </div>
+        </div>
+
+        <div class="featureProducts">
         <h4><strong>Featured Products</strong></h4>
         <p>Featuring the products you might be looking for</p>
+        </div>
         <ul>
             <li><em>Lazy Sofa</em></li>
             <li><em>Motion Sofa</em></li>
@@ -75,12 +86,7 @@
             <li><em>Dinning Chair</em></li>
             <li><em>Office Chair</em></li>
         </ul>
-
-       
-        <div class="Sofas">
-            <img src="" alt="#">
-            <p></p>
-        </div>
     </div>
+
 </body>
 </html>
