--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="home">
         <h3>Classy Rooms Require Furnitures. <br> We make beautifully designed <br> and sustainable furniture</h3>
         <button class="btn2">Buy Now</button>
-        <button class="btn3">Explore</button>
+        <button class="btn3">Explore Products</button>
     
     </div>
     <div class="home-img">
@@ -88,5 +88,15 @@
         </ul>
     </div>
 
+    <!--About-->
+
+    <div class="about">
+        <h3>About us</h3>
+
+    <div class="ourAbout">
+        <p>Our Modern Furniture Store <br> is located in Nairobi and is <br> operating legally with quality <br> products and services and with <br> favorable prices.</p>
+    </div>
+    <button id="shop">Shop</button>
+    </div>
 </body>
 </html>
