--- a/index.html
+++ b/index.html
@@ -98,5 +98,18 @@
     </div>
     <button id="shop">Shop</button>
     </div>
+
+    <!--Contact-->
+    <div class="contact">
+    <h3>Contact us</h3>
+    </div>
+
+    <!--footer-->
+        <footer>
+        <div class="footer">
+            <h4>Contact us</h4>
+        </div>
+        </footer>
 </body>
 </html>
+
