--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Online-Furniture-booking system</title>
     <link rel="stylesheet" href="./Assets/css/style.css">
+    <script src="/script.js"></script>
 </head>
 <body>
     <!--nav-->
