--- a/index.html
+++ b/index.html
@@ -33,6 +33,27 @@
         <h3>Classy Rooms Require Furnitures. <br> We make beautifully designed <br> and sustainable furniture</h3>
         <button class="btn2">Buy Now</button>
         <button class="btn3">Explore Products</button>
+
+    <!--Form-->
+    <div class="form">
+        <form action="" id="addfurnituteForm">
+            <h3>My Furniture Store - Customer Login</h3>
+            <div class="row">
+                <div class="input-form">
+                    <span class="input-Text" id="the-Text"></span>
+                    <input type="text" class="form1" name="User Name" placeholder="User Name" aria-label="User Name" aria-describedby="the-Text">
+                </div>
+
+                <div class="input-form">
+                    <span class="input-Text" id="the-Text"></span>
+                    <input type="text" class="form1" name="Password" placeholder="Password" aria-label="Password" aria-describedby="the-Text">
+                </div>
+                
+                <button class="form submit">Login</button>
+
+            </div>
+        </form>
+    </div>
     
     </div>
     <div class="home-img">
