add styling to form

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <button class="btn3">Explore Products</button>
 
     <!--Form-->
+    <h3><strong>My Furniture Store - Customer Login</strong></h3>
     <div class="form">
         <form action="" id="addfurnituteForm">
-            <h3>My Furniture Store - Customer Login</h3>
             <div class="row">
                 <div class="input-form">
                     <span class="input-Text" id="the-Text"></span>
@@ -49,7 +49,7 @@
                     <input type="text" class="form1" name="Password" placeholder="Password" aria-label="Password" aria-describedby="the-Text">
                 </div>
                 
-                <button class="form submit">Login</button>
+                <button class="form-submit">Login</button>
 
             </div>
         </form>
