--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <button class="btn3">Explore Products</button>
 
     <!--Form-->
-    <h3><strong>My Furniture Store - Customer Login</strong></h3>
+    <h4><strong>My Furniture Store - Customer Login</strong></h3>
+
     <div class="form">
         <form action="" id="addfurnituteForm">
             <div class="row">
@@ -50,6 +51,11 @@
                 </div>
                 
                 <button class="form-submit">Login</button>
+
+                <div class="new-user">
+                <h3>New User ?</h3>
+                <a href="#">Register Here</a>
+                </div>
 
             </div>
         </form>
