add event listener

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <div id="home-page">
     <div class="home">
         <h3>Classy Rooms Require Furnitures. <br> We make beautifully designed <br> and sustainable furniture</h3>
-        <button class="btn2">Buy Now</button>
-        <button class="btn3">Explore Products</button>
+        <button id="btn2" onclick="myFunction()">Buy Now</button>
+        <button id="btn3">Explore Products</button>
 
     </div>
     <div class="home-img">
