change form background color

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./Assets/css/style.css">
 </head>
 <body>
+
     <!--nav-->
     <div class="wrapper">
         <nav class="navbar">
@@ -49,10 +50,9 @@
     </div>
 
     </div>
-    
-    <h2>Order Below!</h2>
 
     <!--Form-->
+    <h2>Our Furniture Collection</h2>
 
     <div class="form" id="myForm" onsubmit="myOrder()">
         <form action="" id="form-container">
@@ -115,7 +115,7 @@
         </div>
 
         <div class="backg2-img">
-            <img src="./Assets/images/backg3.webp" alt="bar-stool" height="300px">
+            <img src="./Assets/images/backg3.webp" alt="" width="300px">
         </div>
         </div>
 
@@ -148,11 +148,16 @@
         <div class="footer">
             <div>
                 <div class="news">
-                <h5>Newsletter</h5>
+                <h5>Subscribe to our Newsletter</h5>
             </div>
-            <div class="newsletter">
+            <div class="feedback-cont">
+            <div id="newsletter">
                 <label for="name"></label>
                 <input type="text" placeholder="Enter Your Email" name="email" required>
+            </div>
+            <div>
+                <button id="submit">submit</button>
+            </div>
             </div>
         </div>
         <div>
@@ -170,9 +175,10 @@
                 <h3>Social Media</h3>
             </div>
                 <div>
-                    <img src="./Assets/images/facebook.png" alt="facebook icon" height="40">
-                    <img src="./Assets/images/insta.png" alt="insta icon" height="40">
-                    <img src="./Assets/images/twitter.png" alt="twitter icon" height="40">
+                    <img src="./Assets/images/facebook.png" alt="facebook icon" height="30">
+                    <img src="./Assets/images/insta.png" alt="insta icon" height="30">
+                    <img src="./Assets/images/twitter.png" alt="twitter icon" height="30">
+                    <h4>+254701424534</h4>
                 </div>
             </div>
         </div>
