add event listener

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
         <nav class="navbar">
             <div class="logo">
-                <a href="#">My <span style="color: brown;">Furniture</span></a>
+                <a href="#">My<span style="color: brown;">Furniture</span></a>
             </div>
             <ul class="main-menu">
                 <li><a href="#">Home</a></li>
@@ -40,7 +40,7 @@
 
     <div id="home-page">
     <div class="home">
-        <h3>Best Quality <br> Furniture  Get <br> Now</h3>
+        <h3>Best Quality <br> Furniture  <span style="color: rgb(67, 67, 185);">Get<br>Now</span></h3>
         
         <button id="btn3">Shop Now</button>
 
@@ -70,10 +70,9 @@
     <label for="location"><b>Location</b></label>
     <input type="location" placeholder="Location" name="Location" required>
 
-
-
     <button type="submit" class="btn">Add To Cart</button>
-    <button type="button" class="btn-cancel" onclick="closeForm()">close Form</button>
+    <button type="payment" class="pay" onclick="prompt">Easy Payments</button>
+    <button type="button" class="btn-cancel" onclick="closeForm()">Close Form</button>
         
     </form>
     </div>
@@ -115,7 +114,7 @@
         </div>
 
         <div class="backg2-img">
-            <img src="./Assets/images/backg3.webp" alt="" width="300px">
+            <img src="./Assets/images/backg3.webp" alt="" height="370px">
         </div>
         </div>
 
@@ -140,10 +139,11 @@
     <div class="ourAbout">
         <p>Our Modern Furniture Store <br> is located in Nairobi and is <br> operating legally with quality <br> products and services and with <br> favorable prices.</p>
     </div>
-    <button id="shop">Shop</button>
+    <button id="shop">Shop With Us</button>
     </div>
 
     <!--footer-->
+
     <footer>
         <div class="footer">
             <div>
@@ -183,9 +183,9 @@
             </div>
         </div>
     </footer>
+    <span class="copyright">Copyright@2022MyFurnitureCollection-All Rights Reserved</span>
 
     <script src="./Assets/js/script.js"></script>
-
 </body>
 </html>
 
