--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <ul class="main-menu">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
                 <div class="dropdown">
                     <li><a class="dropdown-nav" href="#">Products</a></li>
                     <div class="dropdown-menu">
@@ -120,7 +121,7 @@
 
         <div class="featureProducts">
         <h3><strong>Featured Products</strong></h3>
-        <p>Featuring the products you might be looking for</p>
+        <p>Featuring the products you might be looking for -:</p>
         </div>
         <ul>
             <li><em>Lazy Sofa</em></li>
@@ -168,6 +169,7 @@
                 <li>Home</li>
                 <li>Products</li>
                 <li>About us</li>
+                <li>Contact us</li>
             </div>
         </div>
         <div class="soci">
