change fetch image

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <input type="text" placeholder="Enter Your Email" name="email" required>
             </div>
             <div>
-                <button id="submit">submit</button>
+                <button id="submit" onclick="submt()">submit</button>
             </div>
             </div>
         </div>
